// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test ERT Version only 1`] = `
<div
  className="col-12 col-sm-8 col-lg-4"
>
  <div
    className="card-header"
  >
    <h2
      className="mb-0"
    >
       
    </h2>
  </div>
  <div
    className="text-white bg-primary card"
  >
    <div
      className="card-body pb-0 card-block"
    >
      <div
        className="padding-10 row"
      >
        <div
          className="col-12 col-sm-6 col-lg-8"
        >
          <h3>
            Current ERT Version
          </h3>
        </div>
        <div
          className="col-10 col-sm-6 col-lg-4"
        >
          <h3>
            1.10.13
          </h3>
        </div>
      </div>
      <div
        className="padding-10 row"
      >
        <div
          className="col-12 col-sm-6 col-lg-8"
        >
          <h3>
            Staged ERT Version
          </h3>
        </div>
        <div
          className="col-10 col-sm-6 col-lg-4"
        >
          <h3>
            1.11.23
          </h3>
        </div>
      </div>
      <div
        className="padding-10 row"
      >
        <div
          className="col-12 col-sm-6 col-lg-8"
        >
          <h3>
            Current OpsManager Version
          </h3>
        </div>
        <div
          className="col-10 col-sm-6 col-lg-4"
        >
          <h3>
            TBC
          </h3>
        </div>
      </div>
      <div
        className="padding-10 row"
      >
        <div
          className="col-12 col-sm-6 col-lg-8"
        >
          <h3>
            Staged OpsManager Version
          </h3>
        </div>
        <div
          className="col-10 col-sm-6 col-lg-4"
        >
          <h3>
            N/A
          </h3>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test to see if the environment renders correctly 1`] = `
<div
  className="col-12 col-sm-8 col-lg-4"
>
  <div
    className="card-header"
  >
    <h2
      className="mb-0"
    >
       
    </h2>
  </div>
  <div
    className="text-white bg-primary card"
  >
    <div
      className="card-body pb-0 card-block"
    >
      <div
        className="padding-10 row"
      >
        <div
          className="col-12 col-sm-6 col-lg-8"
        >
          <h3>
            Current ERT Version
          </h3>
        </div>
        <div
          className="col-10 col-sm-6 col-lg-4"
        >
          <h3>
            1.10.13
          </h3>
        </div>
      </div>
      <div
        className="padding-10 row"
      >
        <div
          className="col-12 col-sm-6 col-lg-8"
        >
          <h3>
            Staged ERT Version
          </h3>
        </div>
        <div
          className="col-10 col-sm-6 col-lg-4"
        >
          <h3>
            N/A
          </h3>
        </div>
      </div>
      <div
        className="padding-10 row"
      >
        <div
          className="col-12 col-sm-6 col-lg-8"
        >
          <h3>
            Current OpsManager Version
          </h3>
        </div>
        <div
          className="col-10 col-sm-6 col-lg-4"
        >
          <h3>
            1.11.11
          </h3>
        </div>
      </div>
      <div
        className="padding-10 row"
      >
        <div
          className="col-12 col-sm-6 col-lg-8"
        >
          <h3>
            Staged OpsManager Version
          </h3>
        </div>
        <div
          className="col-10 col-sm-6 col-lg-4"
        >
          <h3>
            1.12.12
          </h3>
        </div>
      </div>
    </div>
  </div>
</div>
`;
